public/css/orderform.css
body {
	font-family: "Roboto-Regular", sans-serif;
}

.orderform-panel > .panel-heading {
	color: #333;
	border-color: #fff;
	text-align: center;
}

.orderform-panel > .panel-heading a {
	color: #4e5c6e;
	font-size: 14px;
	-webkit-transition: all 0.1s linear;
	-moz-transition: all 0.1s linear;
	transition: all 0.1s linear;
}

.orderform {
	width: 100%;
}

.orderform-label {
	color: #7f8fa4;
	font-size: 11px;
}
.orderform-pointer {
	cursor: pointer;
}

.orderform-input {
	height: 28px;
	font-size: 12px;
	color: #2d2d2d;
	text-align: left;
	width: 100%;
	display: block;
	border: none;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

.orderform-input:focus {
	outline: none;
}

.orderform-input-symbol-container {
	height: 28px;
	padding-top: 5px;
	padding-right: 10px;
	font-family: "Roboto-Regular", sans-serif;
	color: #9ba6b2;
	font-size: 12px;
	background-color: #fafafa;
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
	text-align: right;
}

.orderform-input-symbol-container:hover {
	cursor: pointer;
}

.orderform-container {
	padding-left: 40px;
	padding-right: 30px;
	padding-bottom: 16px;
}

.orderform-button-buy {
	background-color: #1f5af6 !important;
}
.orderform-button-sell {
	background-color: #e5494d !important;
}

.orderform-button {
	width: 100% !important;
	height: 36px;
	border-radius: 2px;
	border-width: 0px;
}

.orderform-input-container {
	margin-top: 5px;
}

.orderform-content-container {
	padding: 0px;
	border: 1px solid #dae1e9;
}

.orderform-header {
	height: 40px;
	padding-top: 5px;
}

.orderform-sell-active {
	color: #e5494d;
	border-top: 2px solid #e5494d;
	border-left: 1px solid #edf0f4;
}

.orderform-buy-active {
	color: #4e5c6e;
	border-top: 2px solid #1f5af6;
	border-right: 1px solid #edf0f4;
}

.button-container {
	/* padding: 1%; */
	margin: 5% 0;
	/* background-color: #000; */
}

.button-container button {
	background-color: #fff;
	border: 2px solid #edf0f4;
	padding: 0 20%;
	border-radius: 4px;
}

.button-container button:focus {
	outline: none;
}

.button-container .active {
	border: 1px solid #1f5af6;
	color: #1f5af6;
}

.custom-panel {
	background-color: #fff;
	border: 1px solid transparent;
	border-radius: 4px;
	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
	box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
}

#order-form {
	width: 24.75%;
}

@media (max-width: 992px) {
	#order-form {
		width: 99.3%;
	}
}

